# dnstng

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  LTMemory.MD  Makefile  README.md  STmemory.md  TODO.md  build.sh
client/: check.c  check.h  main.c  socks5.c  socks5.h  tunnel_client.c  tunnel_client.h
common/: channel.c  channel.h  compress.c  compress.h  config.c  config.h  crl_channel.c  crl_channel.h  crypto.c  crypto.h  dns_packet.c  dns_packet.h  encode.c  encode.h  log.c  log.h  ocsp_channel.c  ocsp_channel.h  smtp_channel.c  smtp_channel.h  stealth.c  stealth.h  transport.c  transport.h  util.c  util.h
server/: chain.c  chain.h  dns_server.c  dns_server.h  main.c  proxy.c  proxy.h  tunnel_server.c  tunnel_server.h
tests/: run_tests.sh  test_chain.c  test_channel.c  test_dns_packet.c  test_encode.c  test_integration.c  test_transport.c
